[package]
name = "image-ssd"
version = "0.1.0"
authors = ["Serhii Babak <serhii.babak@protonmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.4"
hashbrown = "0.8.2"
ndarray = "0.13.1"
minreq = "2.2.1"
tar = "0.4.29"
flate2 = "1.0.17"
dirs = "3.0"
log = "0.4.8"
checksums = "0.6.0"
tensorflow = "0.16.0"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev = "bfbe63fa796aa92e9bcdc18c42d73a480c1b4031" }
piet = "0.2.0-pre3"
piet-common = "0.2.0-pre3"

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf", rev = "bfbe63fa796aa92e9bcdc18c42d73a480c1b4031" }
