[package]
name = "rpi_video"
version = "0.1.0"
authors = ["Serhii Babak <serhii.babak@protonmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.4"
rscam = { version = "0.5.5", features = ["no_wrapper"] }
# image-ssd = { path = "../../" }
tensorflow = { git = "https://github.com/tensorflow/rust#e9e4b489ed66a2d9fbb5f4b610f1e46a3c38e1fd" }
